# time_series_generator-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-3-link
src/: gaussian_process.rs  geometric_brownian_motion.rs  lib.rs  lorenz_system.rs  mackey_glass_generator.rs  main.rs  plot.rs  plt.rs  sine_wave.rs  standard_normal.rs  step_function.rs  triangle_wave.rs
src/plot/: mod.rs  plot_2d.rs  plot_3d.rs  series_3d.rs
