[package]
name = "time_series_generator"
version = "0.2.0"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Generate various timeseries of given length, some randomly sampled"
repository = "https://github.com/MathisWellmann/timeseries_generator-rs"
readme = "README.md"
keywords = [
    "generator",
    "timeseries",
    "random",
    "sampled",
]
categories = [
    "algorithms",
    "mathematics",
    "science",
    "simulation",
]
exclude = [
    "img/",
    "agplv3.png",
]

[dependencies]
rand = "^0.8"
rand_distr = "^0.4.0"

[dev-dependencies]
plotters = "^0.2.12"
