[package]
name = "time_series_generator"
version = "0.3.2"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Generate various timeseries of given length, some randomly sampled"
repository = "https://github.com/MathisWellmann/timeseries_generator-rs"
readme = "README.md"
keywords = ["generator", "timeseries", "random", "sampled"]
categories = ["algorithms", "mathematics", "science", "simulation"]
exclude = ["img/"]

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
nanorand = "0.7"
num-traits = "0.2.16"

[dev-dependencies]
plotters = "0.3.5"
