[package]
name = "time_series_generator"
version = "0.4.1"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Generate various timeseries of given length, some randomly sampled"
repository = "https://github.com/MathisWellmann/timeseries_generator-rs"
readme = "README.md"
keywords = ["generator", "timeseries", "random", "sampled"]
categories = ["algorithms", "mathematics", "science", "simulation"]
exclude = ["img/"]

[lints.rust]
unused_imports = "deny"
missing_docs = "deny"
dead_code = "deny"

[lints.rustdoc]
missing_crate_level_docs = "deny"

[dependencies]
rand = "0.9"
rand_distr = "0.5"
num-traits = "0.2"

[dev-dependencies]
plotters = "0.3.5"
